@@ -1,3 +1,7 @@
+2008-10-25  Hans Boehm <Hans.Boehm@hp.com> (Really Ivan Maidansky)
+	* mark_rts.c (GC_approx_sp): Use volatile to avoid common
+	warning.
+
 2008-10-25  Hans Boehm <Hans.Boehm@hp.com>
 	* dyn_load.c (GC_cond_add_roots): Fix GC_get_next_stack argument
 	order.
